; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7322.c_set_man_code.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/qib/extr_qib_iba7322.c_set_man_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qib_pportdata = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.qib_pportdata*, i32, i32)* @set_man_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_man_code(%struct.qib_pportdata* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.qib_pportdata*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.qib_pportdata* %0, %struct.qib_pportdata** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.qib_pportdata*, %struct.qib_pportdata** %4, align 8
  %8 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.qib_pportdata*, %struct.qib_pportdata** %4, align 8
  %11 = getelementptr inbounds %struct.qib_pportdata, %struct.qib_pportdata* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @IBSD(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %5, align 4
  %16 = ashr i32 %15, 1
  %17 = add nsw i32 %14, %16
  %18 = load i32, i32* %6, align 4
  %19 = shl i32 %18, 9
  %20 = call i32 @ahb_mod(i32 %9, i32 %13, i32 %17, i32 9, i32 %19, i32 32256)
  ret void
}

declare dso_local i32 @ahb_mod(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @IBSD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
